<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="appName">MetricaUsageApplication</string>
    <string name="menuSettings">Settings</string>
    <string name="titleMainActivity">MetricaUsageApplication</string>
    <string name="titleListActivity">Fruits Screen</string>
    <string name="serviceLabel">MetricaUsageApplicationService</string>

    <string name="goListActivity">GO TO FRUITS LIST ACTIVITY!</string>

    <string name="sendReportsSection"># SEND REPORTS SECTION #</string>
    <string name="sendCustomEvent">SEND CUSTOM EVENT</string>
    <string name="sendCustomError">SEND CUSTOM ERROR</string>
    <string name="sendAutoCrash">CRASH - AUTO SENDING</string>
    <string name="sendManualCrash">SEND MANUAL CRASH</string>
    <string name="sendEventsBuffer">SEND ACCUMULATED EVENTS</string>

    <string name="sessionOptionsSection"># SESSION OPTIONS SECTION #</string>
    <string name="setSessionTimeoutTenSeconds">SESSION TIMEOUT IS 10 SECONDS</string>
    <string name="setSessionTimeoutOneMinute">SESSION TIMEOUT IS 1 MINUTE</string>
    <string name="setSessionTimeoutFiveMinutes">SESSION TIMEOUT IS 5 MINUTES</string>
    <string name="startNewSessionManually">START NEW SESSION MANUALLY</string>

    <string name="sendOptionsSection"># SEND OPTIONS SECTION #</string>
    <string name="setMaxReportsCountToFive">MAX REPORTS COUNT IS 5</string>
    <string name="setMaxReportsCountToTen">MAX REPORTS COUNT IS 10</string>
    <string name="setDispatchPeriodToOneMinute">DISPATCH PERIOD IS 1 MINUTE</string>
    <string name="setDispatchPeriodToTwoMinutes">DISPATCH PERIOD IS 2 MINUTES</string>

    <string name="sendReportOptionsSection"># SEND REPORT OPTIONS SECTION #</string>
    <string name="setReportsEnabled">REPORTS ARE ENABLED</string>
    <string name="setReportsDisabled">REPORTS ARE DISABLED</string>
    <string name="setReportCrashesEnabled">CRASH REPORTS ARE ENABLED</string>
    <string name="setReportCrashesDisabled">CRASH REPORTS ARE DISABLED</string>

    <string name="locationOptionsSection"># LOCATION OPTIONS SECTION #</string>
    <string name="setTrackLocationEnabled">LOCATION TRACKING IS ENABLED</string>
    <string name="setTrackLocationDisabled">LOCATION TRACKING IS DISABLED</string>
    <string name="setLocation">SET CUSTOM LOCATION - FRANCE</string>
</resources>
