<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent" >

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_marginLeft="@dimen/itemMarginLeft"
            android:layout_marginRight="@dimen/itemMarginRight"
            android:layout_height="match_parent"
            android:layout_width="match_parent"
            android:orientation="vertical">

            <TextView
                android:layout_marginTop="@dimen/itemMarginTop"
                android:layout_width="match_parent"
                android:layout_height="@dimen/itemHeight"
                android:textSize="@dimen/itemTextSize"
                android:textStyle="bold"
                android:background="@color/holo_orange_light"
                android:gravity="center"
                android:text="@string/sendReportOptionsSection"/>

            <Button
                android:id="@+id/setReportsEnabledButton"
                android:layout_marginTop="@dimen/itemMarginTop"
                android:layout_width="match_parent"
                android:layout_height="@dimen/itemHeight"
                android:textSize="@dimen/itemTextSize"
                android:background="@drawable/btn_selector"
                android:gravity="center"
                android:text="@string/setReportsEnabled"/>

            <Button
                android:id="@+id/setReportsDisabledButton"
                android:layout_marginTop="@dimen/itemMarginTop"
                android:layout_width="match_parent"
                android:layout_height="@dimen/itemHeight"
                android:textSize="@dimen/itemTextSize"
                android:background="@drawable/btn_selector"
                android:gravity="center"
                android:text="@string/setReportsDisabled"/>

            <Button
                android:id="@+id/setReportCrashesEnabledButton"
                android:layout_marginTop="@dimen/itemMarginTop"
                android:layout_width="match_parent"
                android:layout_height="@dimen/itemHeight"
                android:textSize="@dimen/itemTextSize"
                android:background="@drawable/btn_selector"
                android:gravity="center"
                android:text="@string/setReportCrashesEnabled"/>

            <Button
                android:id="@+id/setReportCrashesDisabledButton"
                android:layout_marginTop="@dimen/itemMarginTop"
                android:layout_width="match_parent"
                android:layout_height="@dimen/itemHeight"
                android:textSize="@dimen/itemTextSize"
                android:background="@drawable/btn_selector"
                android:gravity="center"
                android:text="@string/setReportCrashesDisabled"/>

        </LinearLayout>

    </ScrollView>

</LinearLayout>

